--- a/run_notebooks.yml
+++ b/run_notebooks.yml
@@ -1,1 +1,38 @@
-.github/workflows/run_notebooks.yml
+name: Run All Notebooks Daily
+
+on:
+  schedule:
+    - cron: '0 10 * * *' # 07:00 da manhã no horário de Brasília (UTC-3)
+  workflow_dispatch: # permite execução manual também
+
+jobs:
+  run-notebooks:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install notebook nbconvert papermill
+
+      - name: Run all notebooks
+        run: |
+          for notebook in *.ipynb; do
+            echo "Executando $notebook"
+            papermill "$notebook" "executed/$notebook"
+          done
+
+      - name: Upload executed notebooks as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: executed-notebooks
+          path: executed/
+
